tests/pass/Constant.java
package pass;

public class Constant {
//  const myConstant = 1;

  public int getConstant() {
    return 1;
//    return myConstant;
  }
}
