tests/fail/Constant.java
package fail;

import java.lang.System;

public class Constant {

  const myConstant = 1;

  public static void main(String[] args ) {
    myConstant = 2;
  }

}
